fixed codeblock overflow

--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -65,6 +65,7 @@
     @apply rounded-md;
     @apply bg-gray-100;
     @apply dark:bg-gray-800;
+    @apply overflow-x-auto;
 }
 
 .prose ul, .prose ol {
